// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ObjectSet hover types > probe_aggregate_param 1`] = `
"// The req argument of objectSet.aggregate(...).
& AggregateOpts<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest
  >
  & {
    $select:
      & Pick<
        | UnorderedAggregationClause<
          {
            __DefinitionMetadata?:
              | { properties: {}; props?: {} | undefined }
              | undefined;
          } & EmployeeApiTest
        >
        | OrderedAggregationClause<
          {
            __DefinitionMetadata?:
              | { properties: {}; props?: {} | undefined }
              | undefined;
          } & EmployeeApiTest
        >,
        ValidAggregationKeys<
          {
            __DefinitionMetadata?:
              | { properties: {}; props?: {} | undefined }
              | undefined;
          } & EmployeeApiTest
        >
      >
      & Record<never, never>;
  }
  & {
    $groupBy:
      & Pick<
        GroupByClause<
          {
            __DefinitionMetadata?:
              | { properties: {}; props?: {} | undefined }
              | undefined;
          } & EmployeeApiTest
        > | undefined,
        never
      >
      & Record<never, never>;
  }"
`;

exports[`ObjectSet hover types > probe_asyncIter_result 1`] = `
"// The result of objectSet.asyncIter().
AsyncIterableIterator<
  | Osdk.Instance<EmployeeApiTest, never, PropertyKeys<EmployeeApiTest>, {}>
  | (
    & ObjectIdentifiers<EmployeeApiTest>
    & {
      readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
      readonly $objectType: string;
      readonly $title: string | undefined;
    }
    & Pick<EmployeeApiTest.Props, PropertyKeys<EmployeeApiTest>>
    & {}
    & {
      readonly $link: {
        readonly lead: SingleLinkAccessor<EmployeeApiTest>;
        readonly peeps: ObjectSet<EmployeeApiTest, never>;
      };
      readonly $as: <NEW_Q extends InterfaceDefinition>(
        type: string | NEW_Q,
      ) => Osdk.Instance<
        NEW_Q,
        never,
        ConvertProps<
          EmployeeApiTest,
          NEW_Q,
          PropertyKeys<EmployeeApiTest>,
          never
        >,
        {}
      >;
      readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
        updatedObject?:
          | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
          | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
          | undefined,
      ) => Osdk.Instance<
        EmployeeApiTest,
        never,
        PropertyKeys<EmployeeApiTest> | NEW_PROPS,
        {}
      >;
      readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
        ObjectMetadata: ObjectMetadata;
      };
      readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
        PropertyApiName extends PropertyKeys<EmployeeApiTest>,
      >(
        propertyApiName: PropertyApiName,
        options?: { locale?: string; timezoneId?: string },
      ) => string | undefined;
    }
    & { $score: number }
  )
>"
`;

exports[`ObjectSet hover types > probe_fetchPage_result 1`] = `
"// The awaited result of objectSet.fetchPage().
PageResult<
  | Osdk.Instance<EmployeeApiTest, never, PropertyKeys<EmployeeApiTest>, {}>
  | (
    & ObjectIdentifiers<EmployeeApiTest>
    & {
      readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
      readonly $objectType: string;
      readonly $title: string | undefined;
    }
    & Pick<EmployeeApiTest.Props, PropertyKeys<EmployeeApiTest>>
    & {}
    & {
      readonly $link: {
        readonly lead: SingleLinkAccessor<EmployeeApiTest>;
        readonly peeps: ObjectSet<EmployeeApiTest, never>;
      };
      readonly $as: <NEW_Q extends InterfaceDefinition>(
        type: string | NEW_Q,
      ) => Osdk.Instance<
        NEW_Q,
        never,
        ConvertProps<
          EmployeeApiTest,
          NEW_Q,
          PropertyKeys<EmployeeApiTest>,
          never
        >,
        {}
      >;
      readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
        updatedObject?:
          | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
          | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
          | undefined,
      ) => Osdk.Instance<
        EmployeeApiTest,
        never,
        PropertyKeys<EmployeeApiTest> | NEW_PROPS,
        {}
      >;
      readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
        ObjectMetadata: ObjectMetadata;
      };
      readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
        PropertyApiName extends PropertyKeys<EmployeeApiTest>,
      >(
        propertyApiName: PropertyApiName,
        options?: { locale?: string; timezoneId?: string },
      ) => string | undefined;
    }
    & { $score: number }
  )
>"
`;

exports[`ObjectSet hover types > probe_objectSet 1`] = `
"// A bare ObjectSet<EmployeeApiTest> value.
ObjectSet<EmployeeApiTest, never>"
`;

exports[`ObjectSet hover types > probe_objectSet_with_rdp 1`] = `
"// An ObjectSet with a derived property mom: integer.
ObjectSet<EmployeeApiTest, { mom: "integer" }>"
`;

exports[`ObjectSet hover types > probe_subscribe_listener_param 1`] = `
"// The listener argument of objectSet.subscribe(...).
ObjectSetSubscription.Listener<
  {
    __DefinitionMetadata?:
      | { properties: {}; props?: {} | undefined }
      | undefined;
  } & EmployeeApiTest,
  PropertyKeys<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest
  >,
  boolean
>"
`;

exports[`ObjectSet hover types > probe_where_clause_param 1`] = `
"// The clause argument of objectSet.where(...).
| OrWhereClause<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest,
    {}
  >
  | AndWhereClause<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest,
    {}
  >
  | NotWhereClause<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest,
    {}
  >
  | {
    class?: StringFilter | undefined;
    fullName?: StringFilter | undefined;
    employeeId?: NumberFilter | undefined;
    attachment?: BaseFilter<string> | undefined;
    geopoint?: GeoFilter | undefined;
    timeseries?: BaseFilter<string> | undefined;
    mediaReference?: BaseFilter<string> | undefined;
    geotimeSeriesReference?: BaseFilter<string> | undefined;
    isActive?: BooleanFilter | undefined;
    yearsOfExperience?: NumberFilter | undefined;
    rank?: BaseFilter<string> | undefined;
    performanceScore?: NumberFilter | undefined;
    hourlyRate?: NumberFilter | undefined;
    dateOfJoining?: DatetimeFilter | undefined;
    lastUpdated?: DatetimeFilter | undefined;
    skillSet?: StringFilter | undefined;
    skillSetEmbedding?: BaseFilter<string> | undefined;
  }"
`;

exports[`ObjectSet hover types > probe_where_clause_with_rdp 1`] = `
"// The clause argument of .where(...) on an ObjectSet with a derived mom.
| OrWhereClause<
    {
      __DefinitionMetadata?: {
        properties: { mom: SimplePropertyDef.ToPropertyDef<"integer"> };
        props?: { mom: number } | undefined;
      } | undefined;
    } & EmployeeApiTest,
    {}
  >
  | AndWhereClause<
    {
      __DefinitionMetadata?: {
        properties: { mom: SimplePropertyDef.ToPropertyDef<"integer"> };
        props?: { mom: number } | undefined;
      } | undefined;
    } & EmployeeApiTest,
    {}
  >
  | NotWhereClause<
    {
      __DefinitionMetadata?: {
        properties: { mom: SimplePropertyDef.ToPropertyDef<"integer"> };
        props?: { mom: number } | undefined;
      } | undefined;
    } & EmployeeApiTest,
    {}
  >
  | {
    mom?: NumberFilter | undefined;
    class?: StringFilter | undefined;
    fullName?: StringFilter | undefined;
    employeeId?: NumberFilter | undefined;
    attachment?: BaseFilter<string> | undefined;
    geopoint?: GeoFilter | undefined;
    timeseries?: BaseFilter<string> | undefined;
    mediaReference?: BaseFilter<string> | undefined;
    geotimeSeriesReference?: BaseFilter<string> | undefined;
    isActive?: BooleanFilter | undefined;
    yearsOfExperience?: NumberFilter | undefined;
    rank?: BaseFilter<string> | undefined;
    performanceScore?: NumberFilter | undefined;
    hourlyRate?: NumberFilter | undefined;
    dateOfJoining?: DatetimeFilter | undefined;
    lastUpdated?: DatetimeFilter | undefined;
    skillSet?: StringFilter | undefined;
    skillSetEmbedding?: BaseFilter<string> | undefined;
  }"
`;

exports[`ObjectSet hover types > probe_withProperties_return 1`] = `
"// The result of objectSet.withProperties({ mom: ..., dad: ... }).
ObjectSet<
  EmployeeApiTest,
  { mom: "integer"; dad: "string" | undefined }
>"
`;
